--- a/testdata/login_data.yaml
+++ b/testdata/login_data.yaml
@@ -1,3 +1,7 @@
-user:
-  - ["0912345678", "123456"]
-  - ["0987654321", "654321"]
+user_success:
+  - ["0912345678", "123456", "一般使用者"]
+  - ["0987654321", "654321", "限制行為使用者"]
+user_failed:
+  - ["0912345671", "123456", "帳號鎖定使用者"]
+  - ["0912345672", "123456", "警示帳戶使用者"]
+  - ["0912345673", "123456", "註冊不完全使用者"]
